# Semantic-Caching-LLMOps-Streamlining

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: __init__.py  fields.py  routes.py  schemas.py
src/caching/: __init__.py  builder.py  evaluator.py  normalizer.py  persister.py  selector.py
src/config/: __init__.py  constants.py
src/core/: __init__.py  orchestrator.py
src/embeddings/: __init__.py  embedder.py
src/services/: __init__.py  ollama_service.py  redis_service.py
src/warmup/: __init__.py  loader.py  uploader.py  warmup.py
