[project]
name = "Semantic-Caching-LLMOps-Streamlining"
version = "0.1.0"
description = "A semantic caching pipeline integrating Ollama, Redis, and FastAPI, intended for streamlining LLMOps workflows through reduced latency and operational overhead."
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "httpx==0.28.1",
    "redis==4.6.0",
    "datasets==5.0.0",
    "huggingface_hub==1.20.1",
    "numpy==2.5.0",
    "pydantic==2.13.4"
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff"
]